--- a/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
@@ -1,8 +1,45 @@
 ﻿@using Microsoft.AspNetCore.Components.Web;
 @using Microsoft.AspNetCore.Identity;
+@using Microsoft.Data.SqlClient
 @using pepeizqs_deals_web.Areas.Identity.Data;
 
-<label>test</label>
+<div style="display: flex; align-items: center;">
+	<div style="width: auto;">
+		<button @onclick="@(e => MostrarPestaña(e, 1))" class="boton-pequeño" style="padding: 10px 15px;">
+			Imagenes
+		</button>
+	</div>
+
+</div>
+
+@if (pestañaMostrar > 0)
+{
+	<hr/>
+
+	if (pestañaMostrar == 1)
+	{
+		<div style="display: flex; align-items: start;">
+			<div style="width: 20%;">
+				<button @onclick="@(e => MostrarPestañaImagenes(e, 1))" class="boton-pequeño" style="padding: 10px 15px;">
+					Capsule_231x87
+				</button>
+
+				<button @onclick="@(e => MostrarPestañaImagenes(e, 2))" class="boton-pequeño" style="padding: 10px 15px; margin-top: 10px;">
+					Header_460x215
+				</button>
+			</div>
+
+			<div style="width: 80%; padding: 5px 0px 5px 40px;">
+				<label style="margin-bottom: 10px;">Imagen Origen:</label>
+
+				<input type="text" @oninput="TextoCambiaImagenOrigen" class="entrada-texto" style="margin-bottom: 20px;" value="@imagenOrigen" />
+				<img src="@imagenOrigen" style="max-width: 300px; max-height: 300px;" />
+			</div>
+		</div>
+	}
+}
+
+<hr style="margin-bottom: 100px;"/>
 
 @code {
 
@@ -14,4 +51,45 @@
 	[Parameter]
 	public Juegos.Juego juego { get; set; }
 
+	private int pestañaMostrar = 0;
+	private int pestañaMostrarImagenes = 0;
+
+	private string imagenOrigen = string.Empty;
+
+	private void MostrarPestaña(MouseEventArgs e, int pestaña)
+	{
+		pestañaMostrar = pestaña;
+	}
+
+	private void MostrarPestañaImagenes(MouseEventArgs e, int pestañaImagenes)
+	{
+		pestañaMostrarImagenes = pestañaImagenes;
+
+		if (pestañaMostrarImagenes == 1)
+		{
+			imagenOrigen = juego.Imagenes.Capsule_231x87;
+		}
+		else if (pestañaMostrarImagenes == 2)
+		{
+			imagenOrigen = juego.Imagenes.Header_460x215;
+		}
+	}
+
+	private void TextoCambiaImagenOrigen(ChangeEventArgs texto)
+	{
+		if (pestañaMostrarImagenes == 1)
+		{
+			
+			
+		}
+
+		SqlConnection conexion = Herramientas.BaseDatos.Conectar();
+
+		using (conexion)
+		{
+			BaseDatos.Juegos.Actualizar.Imagenes(juego, conexion);
+		}
+
+		conexion.Dispose();
+	}
 }
