--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
     }  
 
     bool usuarioLogeado = SignInManager.IsSignedIn(User);
+    Usuario usuario = new Usuario();
 
     bool adminLogeado = false;
     int adminNuevosCorreos = 0;
@@ -29,6 +30,8 @@
 
     if (usuarioLogeado == true)
     {
+        usuario = await UserManager.GetUserAsync(User);
+        
         if (await UsuarioCoger.RolDios(UserManager, User) == true)
         {
             adminLogeado = true;
@@ -86,17 +89,54 @@
                     <button class="texto-cabecera" style="border: 0px; margin-left: 0px; margin-right: 30px;"><i class="fa-solid fa-bars" style="font-size: 20px; line-height: 40px;"></i></button>
                     <div class="menu-dropdown-contenido">
 
-                        @if (SignInManager.IsSignedIn(User))
+                        @if (usuarioLogeado == true)
                         {
+                            <a class="texto-cabecera menu-dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Email">
+                                <div style="display: flex; align-items: center;">
+                                    @if (string.IsNullOrEmpty(usuario!.Avatar) == true)
+                                    {
+                                        <div>@usuario.Email</div>
+                                    }
+                                    else
+                                    {
+                                        @if (usuario.Avatar.ToLower().Contains(".jpg") == true || usuario.Avatar.ToLower().Contains(".jpeg") == true || usuario.Avatar.ToLower().Contains(".png") == true || usuario.Avatar.ToLower().Contains(".webp") == true)
+                                        {
+                                            <img src="@usuario.Avatar" style="max-height: 32px; max-width: 32px;" />
+                                            <div style="margin-left: 15px;">@Herramientas.Idiomas.CogerCadena(idioma, "Layout.Account")</div>
+                                        }
+                                        else
+                                        {
+                                            <div>@usuario.Email</div>
+                                        }
+                                    }
+                                </div>
+                            </a>
+                            
                             <a class="texto-cabecera menu-dropdown-item" asp-page="/wishlist">
                                 @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Wishlist")
                             </a>
+
+                            <form id="logoutForm" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                                <button id="logout" type="submit" class="texto-cabecera menu-dropdown-item" style="text-align: left; border: 0; width: 100%;">
+                                    @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Logout")
+                                </button>
+                            </form>                           
                         }
-                        
+                        else
+                        {
+                            <a class="texto-cabecera menu-dropdown-item" asp-area="Identity" asp-page="/Account/Login">
+                                @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Login")
+                            </a>
+                            <a class="texto-cabecera menu-dropdown-item" asp-area="Identity" asp-page="/Account/Register">
+                                @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Register")
+                            </a>
+                        }
+
+                        <hr>
+
                         <a class="texto-cabecera menu-dropdown-item" asp-page="/HistoricalLow">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.HistoricalLows")
-                        </a>
-                        <hr>
+                        </a>                       
                         <a class="texto-cabecera menu-dropdown-item" asp-page="/bundles">
                             @Herramientas.Idiomas.CogerCadena(idioma, "Layout.Bundles")
                         </a>
@@ -117,12 +157,6 @@
                 </div>
 
                 <a class="texto-logo" asp-page="/Index">pepeizq's deals</a>
-
-                @*Resolucion pequeña*@
-@*                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button> *@
 
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1" style="align-items: center; margin-top: 0px;">
@@ -158,7 +192,13 @@
                 </div>
 
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial.cshtml" />
+                    <div style="display: flex; align-items: center; justify-content: center; font-size: 20px; text-align: center;">
+                        <div style="margin-left: 6px; margin-right: 6px;"><a href="https://discord.gg/GBT3FXnrm3" target="_blank"><i class="fa-brands fa-discord"></i></a></div>
+                        <div style="margin-left: 6px; margin-right: 6px;"><a href="https://t.me/pepeizqdeals2" target="_blank"><i class="fa-brands fa-telegram"></i></a></div>
+                        <div style="margin-left: 6px; margin-right: 6px;"><a href="https://reddit.com/r/pepeizqdeals/" target="_blank"><i class="fa-brands fa-reddit"></i></a></div>
+                        <div style="margin-left: 6px; margin-right: 6px;"><a href="https://twitter.com/pepeizqdeals" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></div>
+                        <div style="margin-left: 6px; margin-right: 6px;"><a href="https://steamcommunity.com/groups/pepeizqdeals/" target="_blank"><i class="fa-brands fa-steam"></i></a></div>
+                    </div>
                 </div>
             </div>
         </nav>
