--- a/pepeizqs deals web/Pages/Game.cshtml
+++ b/pepeizqs deals web/Pages/Game.cshtml
@@ -2,7 +2,6 @@
 @model pepeizqs_deals_web.Pages.GameModel
 
 @using Herramientas
-@using Juegos
 @using Microsoft.AspNetCore.Identity
 @using pepeizqs_deals_web.Areas.Identity.Data
 @using System.Net;
@@ -11,40 +10,48 @@
 @inject UserManager<Usuario> UserManager
 
 @{
+	#nullable disable
+
 	ViewData["Title"] = Model.juego.Nombre;
 	Layout = "/Pages/Shared/_Layout.cshtml";
-}
 
-@if (SignInManager.IsSignedIn(User))
-{
-	@if (await UsuarioCoger.RolDios(UserManager, User) == true)
+	bool usuarioLogeado = SignInManager.IsSignedIn(User);
+	Usuario usuario = new Usuario();
+
+	bool adminLogeado = false;
+
+	if (usuarioLogeado == true)
 	{
-		@(await Html.RenderComponentAsync<Componentes.Admin.Juego>(RenderMode.ServerPrerendered, new { idioma = Model.idioma, juego = Model.juego}))
+		usuario = await UserManager.GetUserAsync(User);
 
-		@* <div style="margin-bottom: 80px; margin-left: -10px; width: 100%; display: flex; align-items: center;">
-			<a class="juego-boton-pequeño" href="/Admin/Juegos/Editar?id=@Model.juego.Id">Editar Juego</a>
-
-			@if (Model.juego.IdSteam > 0)
-			{
-				<div style="margin-left: 20px; font-size: 14px;">Steam ID: @Model.juego.IdSteam</div>
-			}
-
-			@if (Model.juego.IdGog > 0)
-			{
-				<div style="margin-left: 20px; font-size: 14px;">GOG ID: @Model.juego.IdGog</div>
-			}
-		</div>	 *@
+		if (await UsuarioCoger.RolDios(UserManager, User) == true)
+		{
+			adminLogeado = true;
+		}
 	}
 }
 
-<div class="juego-wrap">
+@if (usuarioLogeado == true)
+{
+	@if (adminLogeado == true)
+	{
+		@(await Html.RenderComponentAsync<Componentes.Admin.Juego>(RenderMode.ServerPrerendered, new { idioma = Model.idioma, juego = Model.juego, dominio = HttpContext.Request.Host.Value }))
+	}
+}
+
+@(await Html.RenderComponentAsync<Componentes.Secciones.Juego>(RenderMode.ServerPrerendered, new { idioma = Model.idioma, juego = Model.juego, dominio = HttpContext.Request.Host.Value }))
+
+
+
+
+@* <div class="juego-wrap">
 	@if (Model.juego.Tipo == JuegoTipo.Game)
 	{
 		<img class="juego-fondo" src="@await Imagenes.DescargarYGuardar(@Model.juego.Imagenes.Library_1920x620, "juegos", @Model.juego.Id.ToString(), "library_1920x620", HttpContext.Request.Host.Value)" onerror="this.parentNode.removeChild(this)" />
 	}
 	
-    <div class="juego-contenido">
-        <div class="perfil-espacio-bottom juego-cabecera">      
+    <div class="juego-contenido"> *@
+       @*  <div class="perfil-espacio-bottom juego-cabecera">      
 			<div class="perfil-flexible-centrado">
 				<div class="juego-flexible-izquierda">
 					<img src="@JuegoFicha.LimpiarImagenJuego(await Imagenes.DescargarYGuardar(@Model.juego.Imagenes.Header_460x215, "juegos", @Model.juego.Id.ToString(), "header_460x215", HttpContext.Request.Host.Value))" class="juego-imagen" />
@@ -101,9 +108,9 @@
 					</div>				
 				}
 			</div>
-        </div>   
+        </div>    *@
 
-		<div style="display: flex; flex-flow: column wrap; position: fixed; z-index: 0; margin-top: -40px; width: 100%; left: 0; top: 45%;">
+@* 		<div style="display: flex; flex-flow: column wrap; position: fixed; z-index: 0; margin-top: -40px; width: 100%; left: 0; top: 45%;">
 			@foreach (JuegoDRM drm in JuegoDRM2.CargarDRMs())
 			{
 				@if (drm != JuegoDRM.NoEspecificado)
@@ -241,7 +248,7 @@
 			}
 		}
     </div>
-</div>
+</div> *@
 
 <script>
 	let imagenPosicion = 1;
